--- a/academy.html
+++ b/academy.html
@@ -56,6 +56,23 @@
     <details><summary>VoIP & Anonymous Numbers</summary><p>Use internet‑based calling and messaging with private numbers.</p></details>
     <details><summary>Faraday Protection</summary><p>Block wireless signals in transit and storage with Faraday gear.</p></details>
     
+  
+    <section class="card" id="pgp" aria-labelledby="pgp-title">
+      <h2 id="pgp-title">PGP: quick explanation</h2>
+      <p><strong>PGP</strong> (Pretty Good Privacy) is a way to protect the contents of a message using public‑key cryptography. You encrypt with our <em>public key</em>; only we can decrypt it with our <em>private key</em>.</p>
+      <ol>
+        <li>Import our public key from the <a href="assets/pgp/commsblack_public.asc" download>download link</a>.</li>
+        <li>Write your message (e.g., crypto receipt + postal address) and encrypt it to our key.</li>
+        <li>Email the encrypted text (the long block that starts with <code>-----BEGIN PGP MESSAGE-----</code>).</li>
+      </ol>
+      <p>Heads‑up: email <em>subject lines</em> and metadata are not encrypted. Keep subjects generic.</p>
+      <p>Want a deeper dive? See these guides:</p>
+      <ul>
+        <li><a href="https://proton.me/support/how-to-use-pgp" target="_blank" rel="noopener">How to use PGP (Proton guide)</a></li>
+        <li><a href="https://ssd.eff.org/ps/module/key-verification" target="_blank" rel="noopener">EFF: verifying keys & fingerprints</a></li>
+      </ul>
+    </section>
+
   </main>
   
 <footer>
