--- a/academy.html
+++ b/academy.html
@@ -14,14 +14,22 @@
 .section { margin: 2rem 0; }
 .section h2 { font-size: 1.6rem; margin: 0 0 .5rem; }
 .section-body { padding: .25rem .25rem 1rem; }
-details { border: 1px solid var(--card-border, #ddd); border-radius: 10px; margin: .75rem 0; padding: .5rem .75rem; background: var(--card-bg, #fff); }
-summary { cursor: pointer; list-style: none; font-weight: 600; display: flex; align-items: center; gap: .5rem; }
+details { margin: .75rem 0; padding: 1rem; border-radius: 1rem; }
+summary { cursor: pointer; list-style: none; font-weight: 700; display: flex; align-items: center; gap: .5rem; }
 summary::-webkit-details-marker { display: none; }
-.chev { width: .6rem; height: .6rem; border-right: 2px solid var(--brand, #0a7cff); border-bottom: 2px solid var(--brand, #0a7cff); transform: rotate(-45deg); transition: transform .2s ease; }
-details[open] .chev { transform: rotate(45deg); }
-.kicker { margin-left: auto; font-size: .75rem; padding: .1rem .5rem; border-radius: 999px; border: 1px solid rgba(10,124,255,.25); color: var(--brand, #0a7cff); background: rgba(10,124,255,.08); }
+.chev { width: .6rem; height: .6rem; border-right: 2px solid var(--accent); border-bottom: 2px solid var(--accent); transform: rotate(-45deg); transition: transform .2s ease; }
+details[open] .chev { width: .6rem; height: .6rem; border-right: 2px solid var(--accent); border-bottom: 2px solid var(--accent); transform: rotate(-45deg); transition: transform .2s ease; }
+.kicker { margin-left: auto; font-size: .75rem; padding: .1rem .5rem; border-radius: 999px; border: 1px solid var(--accent); color: var(--accent); background: var(--hover); }
 .tips { margin: .5rem 0 0 1rem; }
-.fine { color: #666; font-size: .85rem; margin-top: 1rem; }
+.fine { color: var(--muted); font-size: .85rem; margin-top: 1rem; }
+
+
+/* table of contents */
+.toc { background: var(--card); border-radius: 1rem; padding: 1rem 1.25rem; margin: 1rem 0 2rem; box-shadow: var(--shadow); }
+.toc h2 { margin: 0 0 .5rem; font-size: 1.25rem; }
+.toc ul { margin: 0; padding-left: 1.25rem; display: grid; gap: .25rem; }
+.toc a { color: var(--ink); text-decoration: none; }
+.toc a:hover { text-decoration: underline; color: var(--accent); }
 </style></head>
 <body>
 <header>
@@ -57,9 +65,11 @@ details[open] .chev { transform: rotate(45deg); }
 </nav>
 </div>
 </header>
-<main>
+<main class="container"><section class="lede" id="academy-intro"><h1>Academy</h1><p>We are committed to empowering everyday Australians with the tools, knowledge, and platforms to communicate on their own terms. No gatekeepers. No surveillance. No compromise.
+
+Because a nation that can speak freely is a nation that can think freely.</p></section><nav aria-label="Table of contents" class="toc"><h2>Contents</h2><ul><li><a href="#know-the-threats">Know the Threats (Awareness)</a></li><li><a href="#protect-yourself">Protect Yourself (Defense)</a></li><li><a href="#build-good-habits">Build Good Habits (Operational Security)</a></li><li><a href="#push-back">Push Back (Advocacy &amp; Rights)</a></li><li><a href="#high-risk-playbooks">High-Risk Playbooks</a></li></ul></nav>
 <section class="section" id="know-the-threats">
-<h2>1) Know the Threats (Awareness)</h2>
+<h2>Know the Threats (Awareness)</h2>
 <div class="section-body">
 <details><summary><span class="chev"></span> Surveillance Laws in Plain English <span class="kicker">Context</span></summary>
 <article>
@@ -114,7 +124,7 @@ details[open] .chev { transform: rotate(45deg); }
 </div>
 </section>
 <section class="section" id="protect-yourself">
-<h2>2) Protect Yourself (Defense)</h2>
+<h2>Protect Yourself (Defense)</h2>
 <div class="section-body">
 <details><summary><span class="chev"></span> Choosing Secure Devices &amp; OS <span class="kicker">Foundation</span></summary>
 <article>
@@ -189,7 +199,7 @@ details[open] .chev { transform: rotate(45deg); }
 </div>
 </section>
 <section class="section" id="build-good-habits">
-<h2>3) Build Good Habits (Operational Security)</h2>
+<h2>Build Good Habits (Operational Security)</h2>
 <div class="section-body">
 <details><summary><span class="chev"></span> Don’t Mix Identities <span class="kicker">Discipline</span></summary>
 <article>
@@ -244,7 +254,7 @@ details[open] .chev { transform: rotate(45deg); }
 </div>
 </section>
 <section class="section" id="push-back">
-<h2>4) Push Back (Advocacy &amp; Rights)</h2>
+<h2>Push Back (Advocacy &amp; Rights)</h2>
 <div class="section-body">
 <details><summary><span class="chev"></span> Your Rights in Australia <span class="kicker">Oversight</span></summary>
 <article>
@@ -299,7 +309,7 @@ details[open] .chev { transform: rotate(45deg); }
 </div>
 </section>
 <section class="section" id="high-risk-playbooks">
-<h2>5) High-Risk Playbooks</h2>
+<h2>High-Risk Playbooks</h2>
 <div class="section-body">
 <details><summary><span class="chev"></span> Fortress Mode (Qubes OS) <span class="kicker">Isolation</span></summary>
 <article>
