--- a/faqs.html
+++ b/faqs.html
@@ -20,7 +20,7 @@
       <span>CommsBlack Mobile</span>
     </a>
     <nav class="nav desktop-nav" aria-label="Primary">
-      <a href="index.html">Mission</a>
+      <a href="threat-assessment.html">Threat Assessment</a><a href="index.html">Mission</a>
       <a href="products.html">Products</a>
       <a href="academy.html">Academy</a>
       <a href="faqs.html">FAQ’s</a>
