--- a/threat-assessment.html
+++ b/threat-assessment.html
@@ -4,14 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Threat Assessment — Comms Black</title>
+  <link rel="stylesheet" href="style.css">
+  <script defer src="script.js"></script>
   <style>
+    /* Scoped helpers only */
     :root { --tile-gap: 12px; --tile-radius: 12px; --tile-pad: 12px; --tile-border: 1px; }
     main.assessment-container { max-width: 1000px; margin: 0 auto; padding: 1rem 1rem 3rem; }
     .progress-wrap { position: sticky; top: 0; z-index: 50; backdrop-filter: blur(4px); }
     .progress-bar-bg { height: 6px; width: 100%; background: rgba(255,255,255,0.12); }
     .progress-bar-fill { height: 6px; width: 0%; background: currentColor; }
-    .cta-btn { display:inline-block; padding:.7rem 1rem; border-radius:10px; border:1px solid currentColor; background: transparent; cursor:pointer; }
-    .result-box { border:1px solid rgba(255,255,255,.2); padding:1rem; margin-top:1rem; border-radius:12px; }
     .q { margin: 1.25rem 0 1.1rem; }
     .q h2 { font-size: 1.05rem; margin: .25rem 0 .6rem; }
     .group { display:grid; grid-template-columns: repeat(auto-fit,minmax(220px,1fr)); gap: var(--tile-gap); }
@@ -23,12 +24,17 @@
     .tile:hover { border-color: color-mix(in oklab, currentColor 40%, rgba(255,255,255,.25)); }
     .badge { display:inline-block; padding:.2rem .55rem; font-size:.75rem; border:1px solid currentColor; border-radius:999px; opacity:.75; }
     h1.page-title { margin: 1rem 0 .5rem; font-size: clamp(1.3rem, 2.4vw + .6rem, 2rem); }
-    .result-box ul { margin:.3rem 0 0 1.2rem; }
+    .result-box { border:1px solid rgba(255,255,255,.2); padding:1rem; margin-top:1rem; border-radius:12px; }
     @media (max-width: 520px){ .group { grid-template-columns: 1fr; } }
   </style>
 </head>
 <body>
-  <main class="assessment-container" id="top">
+
+  <!-- reuse existing header via script.js if it injects; otherwise this page will still inherit style.css colors -->
+
+  <nav id="top-nav" class="site-nav"></nav>
+
+  <main class="assessment-container">
     <div class="progress-wrap">
       <div class="progress-bar-bg">
         <div class="progress-bar-fill" id="progressFill" style="width:0%"></div>
@@ -137,10 +143,26 @@
   </main>
 
   <script>
+    // Simple nav builder matching existing order; insert Threat Assessment between Mission and Products
+    (function(){
+      var nav = document.getElementById('top-nav');
+      if(!nav) return;
+      var ul = document.createElement('ul');
+      ul.className = 'nav-list';
+      function item(href, text){ var li=document.createElement('li'); var a=document.createElement('a'); a.href=href; a.textContent=text; li.appendChild(a); return li; }
+      // Use your site's order
+      ul.appendChild(item('index.html','Mission'));
+      ul.appendChild(item('threat-assessment.html','Threat Assessment'));
+      ul.appendChild(item('products.html','Products'));
+      ul.appendChild(item('academy.html','Academy'));
+      ul.appendChild(item('faqs.html',"FAQ's"));
+      ul.appendChild(item('contact.html','Contact'));
+      nav.appendChild(ul);
+    })();
+
     function serializeCheckboxes(form, name) {
       return Array.from(form.querySelectorAll("input[name='" + name + "']:checked")).map(n=>n.value);
     }
-
     function updateProgress() {
       const form = document.getElementById('threatForm');
       const questions = Array.from(form.querySelectorAll('section.q'));
@@ -155,40 +177,13 @@
       const bar = document.getElementById('progressFill');
       if (bar) bar.style.width = pct + '%';
     }
-
-    function fixNavOrder() {
-      const nav = document.querySelector('nav');
-      if (!nav) return;
-      const links = nav.querySelectorAll('a');
-      let assess, mission, products;
-      links.forEach(a => {
-        const t = a.textContent.trim().toLowerCase();
-        if (t.startsWith('threat')) assess = a;
-        if (t.startsWith('mission')) mission = a;
-        if (t.startsWith('products')) products = a;
-      });
-      if (assess && (mission || products)) {
-        const li = assess.closest('li') || assess;
-        if (mission) {
-          const insertAfter = mission.closest('li') || mission;
-          insertAfter.after(li);
-        } else if (products) {
-          const insertBefore = products.closest('li') || products;
-          insertBefore.before(li);
-        }
-      }
-    }
-
     document.addEventListener('change', function(e){
       if (e.target && (e.target.matches('input[type=radio]') || e.target.matches('input[type=checkbox]'))) {
         updateProgress();
       }
     });
-
     document.addEventListener('DOMContentLoaded', function(){
-      fixNavOrder();
       updateProgress();
-
       const form = document.getElementById('threatForm');
       form.addEventListener('submit', function(e){
         e.preventDefault();
@@ -204,7 +199,6 @@
           opsec: f.opsec.value,
           budget: f.budget.value
         };
-
         let score = 0;
         if(data.device_use==='highrisk') score += 3;
         if(data.adversary==='state') score += 4;
@@ -216,39 +210,18 @@
         if(data.internet==='public') score += 2;
         if(data.opsec==='disciplined') score -= 2;
         if(data.budget==='priority') score += 1;
-
         let posture = '';
         if(score <= 3) posture = 'Low — Opportunistic adversary posture';
         else if(score <= 7) posture = 'Moderate — Targeted adversary posture';
         else posture = 'High — Advanced / Nation-state level posture likely';
-
         let kit = [];
-        if(score <= 3) {
-          kit.push('Maintain strong unique passwords, 2FA, keep devices updated.');
-          kit.push('Use encrypted messaging for sensitive comms (Signal).');
-        } else if(score <=7) {
-          kit.push('Harden device: full-disk encryption, secure backups, separate work/personal profiles.');
-          kit.push('Use privacy-preserving comms, dedicated secure SIM or burner where possible.');
-          kit.push('Limit metadata leaks: remove EXIF, use ephemeral accounts where feasible.');
-        } else {
-          kit.push('Operationalize: air-gapped options for highest-risk assets, professional security consultation.');
-          kit.push('Use verified secure devices, multi-layered comms security, OPSEC training for contacts.');
-          kit.push('Consider legal protections and crisis plans for physical safety.');
-        }
-
-        if(data.adversary==='bigtech') {
-          kit.push('Reduce data broker exposure: audit permissions, minimise third-party accounts.');
-        }
-        if(data.adversary==='stalker') {
-          kit.push('Review physical security, home privacy, and consider changing routines.');
-        }
-        if(data.assets.includes('location')) {
-          kit.push('Disable location sharing and strip geodata from content before sharing.');
-        }
-        if(data.internet==='anonSIM') {
-          kit.push('Anonymous SIMs help, but pair with secure device configuration and postpaid separation.');
-        }
-
+        if(score <= 3) { kit.push('Maintain strong unique passwords, 2FA, keep devices updated.'); kit.push('Use encrypted messaging for sensitive comms (Signal).'); }
+        else if(score <=7) { kit.push('Harden device: full-disk encryption, secure backups, separate work/personal profiles.'); kit.push('Use privacy-preserving comms, dedicated secure SIM or burner where possible.'); kit.push('Limit metadata leaks: remove EXIF, use ephemeral accounts where feasible.'); }
+        else { kit.push('Operationalize: air-gapped options for highest-risk assets, professional security consultation.'); kit.push('Use verified secure devices, multi-layered comms security, OPSEC training for contacts.'); kit.push('Consider legal protections and crisis plans for physical safety.'); }
+        if(data.adversary==='bigtech') { kit.push('Reduce data broker exposure: audit permissions, minimise third-party accounts.'); }
+        if(data.adversary==='stalker') { kit.push('Review physical security, home privacy, and consider changing routines.'); }
+        if(data.assets.includes('location')) { kit.push('Disable location sharing and strip geodata from content before sharing.'); }
+        if(data.internet==='anonSIM') { kit.push('Anonymous SIMs help, but pair with secure device configuration and postpaid separation.'); }
         const result = document.getElementById('result');
         let html = '<h2>Your assessment</h2>';
         html += '<p><strong>Score:</strong> ' + score + ' — <em>' + posture + '</em></p>';
@@ -262,5 +235,6 @@
       });
     });
   </script>
+
 </body>
 </html>
